--- a/src/layout/partial/sidebar.jade
+++ b/src/layout/partial/sidebar.jade
@@ -1,7 +1,7 @@
 .sidebar.hide-scrollbar
     - var first=1
     each head in ['云音乐','用户','本地']
-        .collection
+        .source
             .head
                 h4.txt=head
                 .tools
